# pdigy

./: .gitignore  MANIFEST.in  PDigyExample.xlsx  PDigyTest.ipynb  README.md  constants.py  decoder.py  encoder.py  pyproject.toml  setup.py  test_helpers.py
pdigy/: PDigyMap.xlsx  __init__.py  decoder.py  encoder.py
